# freivald-backend

./: Cargo.toml
src/: main.rs
static/: index-a154ce11c0b329f8.js  index-a154ce11c0b329f8_bg.wasm  index.html
