[package]
name = "freivald-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
ark-bls12-381 = "0.3"
ark-std = "0.3"
ark-ff = "0.3"
#getrandom = {version = "0.2.6", features =["js"]} # needed for thread_rng in wasm in js runtime
rand = { version = "0.8", features = [ "std", "std_rng" ] } # provides ark_std::rand::thread_rng
nalgebra = { version = "0.31", features =["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }




[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]